<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#5290df"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/about_fbla"
        android:layout_width="415dp"
        android:layout_height="101dp"
        android:text="@string/about_fbla"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/contact_fbla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calendar"
        android:layout_width="415dp"
        android:layout_height="101dp"
        android:layout_marginBottom="228dp"
        android:text="@string/calendar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/contact_fbla"
        android:layout_width="415dp"
        android:layout_height="101dp"
        android:text="@string/contact_FBLA"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="415dp"
        android:layout_height="101dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/about_fbla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/attendance"
        android:layout_width="415dp"
        android:layout_height="101dp"
        android:text="@string/attendance"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/terms_service"
        android:layout_width="224dp"
        android:layout_height="57dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/terms_service"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bugs" />

    <TextView
        android:id="@+id/bugs"
        android:layout_width="224dp"
        android:layout_height="57dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="Report Bugs"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/terms_service"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/facebook"
        android:contentDescription="facebook"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/insta"
        android:layout_width="64dp"
        android:layout_height="58dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="148dp"
        android:contentDescription="insta"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linkedin"
        app:srcCompat="@drawable/insta" />

    <ImageButton
        android:id="@+id/linkedin"
        android:layout_width="64dp"
        android:layout_height="58dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="linkedin"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:srcCompat="@drawable/linkedin" />

    <ImageButton
        android:id="@+id/twitter"
        android:layout_width="64dp"
        android:layout_height="58dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="twitter"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toEndOf="@+id/insta"
        app:srcCompat="@drawable/twitter" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="315dp"
        android:layout_height="139dp"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fbla_pic" />

</androidx.constraintlayout.widget.ConstraintLayout>